fix(core): fix rebase
