# packages/core/src/routes/logto-config.openapi.json
@@ -169,33 +169,14 @@
           }
         }
       },
-      "get": {
-        "summary": "Get JWT customizer",
-        "description": "Get the JWT customizer for the given token type.",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "tokenType",
-            "description": "The token type to get the JWT customizer for."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "The JWT customizer."
-          },
-          "404": {
-            "description": "The JWT customizer does not exist."
-          }
-        }
-      },
       "delete": {
         "summary": "Delete JWT customizer",
         "description": "Delete the JWT customizer for the given token type.",
         "parameters": [
           {
             "in": "path",
-            "name": "tokenType",
-            "description": "The token type to delete the JWT customizer for."
+            "name": "tokenTypePath",
+            "description": "The token type path to delete the JWT customizer for."
           }
         ],
         "responses": {
